feat(esphome): Disable

--- a/kubernetes/main/apps/home-automation/kustomization.yaml
+++ b/kubernetes/main/apps/home-automation/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 
   # Flux-Kustomizations
   # - ./ambientweather2mqtt/ks.yaml
-  - ./esphome/ks.yaml
+  # - ./esphome/ks.yaml
   # - ./home-assistant/ks.yaml
   # - ./mosquitto/ks.yaml
   # - ./scrypted/ks.yaml
